--- a/cubejs/templates/api/service.yaml
+++ b/cubejs/templates/api/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "cubejs.fullname" . }}
   labels:
-    app.kubernetes.io/component: master
+    app.kubernetes.io/component: api
     {{- include "cubejs.labels" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
@@ -28,5 +28,5 @@ spec:
       targetPort: pgsql
     {{- end}}
   selector:
-    app.kubernetes.io/component: master
+    app.kubernetes.io/component: api
     {{- include "cubejs.selectorLabels" . | nindent 4 }}
