[cubejs] add apiCount variable

--- a/cubejs/templates/api/deployment.yaml
+++ b/cubejs/templates/api/deployment.yaml
@@ -12,6 +12,7 @@ metadata:
     {{- toYaml .Values.commonAnnotations | nindent 4 }}
   {{- end }}
 spec:
+  replicas: {{ .Values.api.apiCount }}
   selector:
     matchLabels:
       app.kubernetes.io/component: api
