--- a/cubejs/values.yaml
+++ b/cubejs/values.yaml
@@ -470,6 +470,8 @@ api:
     automountServiceAccountToken: true
     annotations: {}
 
+  apiCount: 1
+
   ## Affinity for pod assignment
   ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
   ##
