--- a/charts/cube/templates/api/deployment.yaml
+++ b/charts/cube/templates/api/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ printf "%s-api" (include "cubejs.fullname" .) }}
+  name: {{ printf "%s-api" (include "cube.fullname" .) }}
   labels:
-    {{- include "cubejs.labels" . | nindent 4 }}
+    {{- include "cube.labels" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
     {{- end }}
@@ -16,12 +16,12 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/component: api
-      {{- include "cubejs.selectorLabels" . | nindent 6 }}
+      {{- include "cube.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app.kubernetes.io/component: api
-        {{- include "cubejs.selectorLabels" . | nindent 8 }}
+        {{- include "cube.selectorLabels" . | nindent 8 }}
         {{- if .Values.commonLabels }}
         {{- toYaml .Values.commonLabels | nindent 8 }}
         {{- end }}        
@@ -30,7 +30,7 @@ spec:
       {{- toYaml .Values.commonAnnotations | nindent 8 }}
       {{- end }}
     spec:
-      serviceAccountName: {{ template "cubejs.api.serviceAccountName" . }}
+      serviceAccountName: {{ template "cube.api.serviceAccountName" . }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -58,7 +58,7 @@ spec:
               protocol: TCP
             {{- end }}
           env:
-            {{- include "cubejs.common-env" . | nindent 12 }}
+            {{- include "cube.common-env" . | nindent 12 }}
           {{- if .Values.api.livenessProbe.enabled }}
           livenessProbe:
             initialDelaySeconds: {{ .Values.api.livenessProbe.initialDelaySeconds }}
