--- a/charts/cube/templates/api/service.yaml
+++ b/charts/cube/templates/api/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cubejs.fullname" . }}
+  name: {{ include "cube.fullname" . }}
   labels:
     app.kubernetes.io/component: api
-    {{- include "cubejs.labels" . | nindent 4 }}
+    {{- include "cube.labels" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
     {{- end }}
@@ -29,4 +29,4 @@ spec:
     {{- end}}
   selector:
     app.kubernetes.io/component: api
-    {{- include "cubejs.selectorLabels" . | nindent 4 }}
+    {{- include "cube.selectorLabels" . | nindent 4 }}
