--- a/charts/cube/templates/api/serviceaccount.yaml
+++ b/charts/cube/templates/api/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "cubejs.api.serviceAccountName" . }}
+  name: {{ template "cube.api.serviceAccountName" . }}
   labels:
-    {{- include "cubejs.labels" . | nindent 4 }}
+    {{- include "cube.labels" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
     {{- end }}
