--- a/charts/cube/templates/workers/deployment.yaml
+++ b/charts/cube/templates/workers/deployment.yaml
@@ -2,9 +2,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ printf "%s-workers" (include "cubejs.fullname" .) }}
+  name: {{ printf "%s-workers" (include "cube.fullname" .) }}
   labels:
-    {{- include "cubejs.labels" . | nindent 4 }}
+    {{- include "cube.labels" . | nindent 4 }}
     {{- if .Values.commonLabels }}
     {{- toYaml .Values.commonLabels | nindent 4 }}
     {{- end }}
@@ -17,12 +17,12 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/component: workers
-      {{- include "cubejs.selectorLabels" . | nindent 6 }}
+      {{- include "cube.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app.kubernetes.io/component: workers
-        {{- include "cubejs.selectorLabels" . | nindent 8 }}
+        {{- include "cube.selectorLabels" . | nindent 8 }}
         {{- if .Values.commonLabels }}
         {{- toYaml .Values.commonLabels | nindent 8 }}
         {{- end }}        
@@ -31,7 +31,7 @@ spec:
       {{- toYaml .Values.commonAnnotations | nindent 8 }}
       {{- end }}
     spec:
-      serviceAccountName: {{ template "cubejs.workers.serviceAccountName" . }}
+      serviceAccountName: {{ template "cube.workers.serviceAccountName" . }}
       {{- with .Values.image.pullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -49,7 +49,7 @@ spec:
               containerPort: {{ .Values.config.apiPort }}
               protocol: TCP
           env:
-            {{- include "cubejs.common-env" . | nindent 12 }}
+            {{- include "cube.common-env" . | nindent 12 }}
             - name: CUBEJS_REFRESH_WORKER
               value: "true"
           {{- if .Values.workers.livenessProbe.enabled }}
