[cubestore] fix readme and update version

--- a/charts/cubestore/Chart.yaml
+++ b/charts/cubestore/Chart.yaml
@@ -2,9 +2,10 @@ apiVersion: v2
 name: cubestore
 description: A Helm chart for Cubestore
 type: application
-version: 0.2.0
-appVersion: "0.31.37"
+version: 0.3.0
+appVersion: "0.31.41"
 keywords:
+  - cube
   - cubejs
   - cubestore
 maintainers:
