[cube] add bigquery keyFile
Co-authored-by: Filippo Balicchia <fbalicchia@gmail.com>

--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -340,6 +340,10 @@ database:
     #   name:
     #   key:
 
+    ## The path to a JSON key file for connecting to Google BigQuery
+    ##
+    keyFile:
+
   hive:
     ## The version of the CDH instance for Apache Hive
     ##
