--- a/charts/cube/templates/workers/deployment.yaml
+++ b/charts/cube/templates/workers/deployment.yaml
@@ -49,7 +49,7 @@ spec:
               containerPort: {{ .Values.config.apiPort }}
               protocol: TCP
           env:
-            {{- include "cube.common-env" . | nindent 12 }}
+            {{- include "cube.env" . | nindent 12 }}
             - name: CUBEJS_REFRESH_WORKER
               value: "true"
           {{- if .Values.workers.livenessProbe.enabled }}
