[cube] add chart source

--- a/charts/cube/Chart.yaml
+++ b/charts/cube/Chart.yaml
@@ -1,16 +1,19 @@
 apiVersion: v2
 name: cube
 description: A Helm chart for Cube
+home: https://cube.dev
 type: application
 version: 1.0.0
 appVersion: "0.31.47"
 keywords:
   - cubejs
   - cube
-
 maintainers:
   - email: luc.vauvillier@gmail.com
     name: Luc Vauvillier
 sources:
-  - https://github.com/gadsme/charts
   - https://github.com/cube-js/cube.js
+annotations:
+  "artifacthub.io/links": |
+    - name: Chart Source
+      url: https://github.com/gadsme/charts
