--- a/charts/cubestore/Chart.yaml
+++ b/charts/cubestore/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: cubestore
 description: A Helm chart for Cubestore
 type: application
-version: 0.4.0
-appVersion: "0.31.47"
+version: 0.5.0
+appVersion: "0.31.55"
 keywords:
   - cube
   - cubejs
@@ -12,5 +12,8 @@ maintainers:
   - email: luc.vauvillier@gmail.com
     name: Luc Vauvillier
 sources:
-  - https://github.com/gadsme/charts
   - https://github.com/cube-js/cube.js
+annotations:
+  "artifacthub.io/links": |
+    - name: Chart Source
+      url: https://github.com/gadsme/charts
