[cube] update README

--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -508,6 +508,10 @@ datasources:
       ##
       apiKeyKey:
 
+    trino:
+      ## The catalog within Trino to connect to
+      ##
+      catalog:
 ## Cubestore configuration
 ##
 cubestore:
