--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -14,6 +14,11 @@ commonLabels: {}
 ##
 commonAnnotations: {}
 
+envFromSecret: ""
+envFromSecrets: []
+
+
+
 image:
   ## Docker image repository
   ##
