disable router mysql port by default
Signed-off-by: František Hána <sinacek@gmail.com>

--- a/charts/cubestore/templates/router/service.yaml
+++ b/charts/cubestore/templates/router/service.yaml
@@ -20,9 +20,11 @@ spec:
     - name: meta
       port: {{ .Values.router.metaPort }}
       targetPort: meta
+    {{- if .Values.router.mysqlPort }}
     - name: mysql
       port: {{ .Values.router.mysqlPort }}
       targetPort: mysql
+    {{- end }}
   selector:
     app.kubernetes.io/component: router
     {{- include "cubestore.selectorLabels" . | nindent 4 }}
