--- a/charts/cubestore/templates/router/statefulset.yaml
+++ b/charts/cubestore/templates/router/statefulset.yaml
@@ -50,9 +50,11 @@ spec:
             - name: meta
               containerPort: {{ .Values.router.metaPort }}
               protocol: TCP
+            {{- if .Values.router.mysqlPort }}
             - name: mysql
               containerPort: {{ .Values.router.mysqlPort }}
               protocol: TCP
+            {{- end }}
             - name: status
               containerPort: {{ .Values.router.statusPort }}
               protocol: TCP
@@ -63,8 +65,10 @@ spec:
             {{- $workerPort := .Values.workers.port | int }}
             - name: CUBESTORE_SERVER_NAME
               value: {{ printf "%s-router:%d" (include "cubestore.fullname" .) (.Values.router.metaPort | int) }}
+            {{- if .Values.router.mysqlPort }}
             - name: CUBESTORE_PORT
               value: {{ .Values.router.mysqlPort | quote }}
+            {{- end }}
             - name: CUBESTORE_HTTP_PORT
               value: {{ .Values.router.httpPort | quote }}
             - name: CUBESTORE_META_PORT
