--- a/charts/cube/templates/workers/deployment.yaml
+++ b/charts/cube/templates/workers/deployment.yaml
@@ -52,6 +52,20 @@ spec:
             {{- include "cube.env" . | nindent 12 }}
             - name: CUBEJS_REFRESH_WORKER
               value: "true"
+            {{- if .Values.extraEnvVars }}
+            {{- include "cube.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 12 }}
+            {{- end }}
+          {{- if or .Values.extraEnvVarsFromConfigMap .Values.extraEnvVarsFromSecret }}
+          envFrom:
+            {{- if .Values.extraEnvVarsFromConfigMap }}
+            - configMapRef:
+                name: {{ include "cube.tplvalues.render" (dict "value" .Values.extraEnvVarsFromConfigMap "context" $) }}
+            {{- end }}
+            {{- if .Values.extraEnvVarsFromSecret }}
+            - secretRef:
+                name: {{ include "cube.tplvalues.render" (dict "value" .Values.extraEnvVarsFromSecret "context" $) }}
+            {{- end }}
+          {{- end }}
           {{- if .Values.workers.livenessProbe.enabled }}
           livenessProbe:
             initialDelaySeconds: {{ .Values.workers.livenessProbe.initialDelaySeconds }}
