--- a/charts/cube/values.yaml
+++ b/charts/cube/values.yaml
@@ -14,6 +14,22 @@ commonLabels: {}
 ##
 commonAnnotations: {}
 
+## Extra environment variables to pass on to the pod. The value is evaluated as a template
+## e.g:
+## extraEnvVars:
+##   - name: FOO
+##     value: "bar"
+##
+extraEnvVars: []
+
+## Name of a Config Map containing extra environment variables to pass on to the pod
+##
+extraEnvVarsFromConfigMap:
+
+## Name of a Secret containing extra environment variables to pass on to the pod
+##
+extraEnvVarsFromSecret:
+
 image:
   ## Docker image repository
   ##
