Add CUBESTORE_AWS_CREDS_REFRESH_EVERY_MINS parameter to cubestore config

--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -136,6 +136,10 @@ cloudStorage:
     ##
     subPath:
 
+    ##The number of minutes after which Cube Store should refresh AWS credentials.
+    ##
+    refreshCredsEveryMinutes:
+
   minio:
     ## The Access Key ID for minIO. Required when using minIO
     ##
