setup workers storage class
Signed-off-by: František Hána <sinacek@gmail.com>

--- a/charts/cubestore/templates/workers/statefulset.yaml
+++ b/charts/cubestore/templates/workers/statefulset.yaml
@@ -133,6 +133,9 @@ spec:
         {{- range .Values.workers.persistence.accessModes }}
           - {{ . | quote }}
         {{- end }}
+        {{- if .Values.workers.persistence.storageClass }}
+        storageClassName: {{ .Values.workers.persistence.storageClass }}
+        {{- end }}
         resources:
           requests:
             storage: {{ .Values.workers.persistence.size | quote }}
