--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -211,6 +211,14 @@ router:
     accessModes:
       - ReadWriteOnce
 
+    ## @param router.persistence.storageClass The storage class to use for the workers pvc
+    ## If defined, storageClassName: <storageClass>
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    storageClass:
+
     ## Additional custom annotations for the PVC
     ##
     annotations: {}
@@ -298,6 +306,14 @@ workers:
     ##
     accessModes:
       - ReadWriteOnce
+
+    ## @param workers.persistence.storageClass The storage class to use for the workers pvc
+    ## If defined, storageClassName: <storageClass>
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    storageClass:
 
     ## Additional custom annotations for the PVC
     ##
