--- a/charts/cubestore/values.yaml
+++ b/charts/cubestore/values.yaml
@@ -276,6 +276,18 @@ router:
   ##
   nodeSelector: {}
 
+  ## Service Annotations
+  ##
+  service: {}
+
+  ## Extra environment variables to pass on to the pod. The value is evaluated as a template
+  ## e.g:
+  ## extraEnvVars:
+  ##   - name: FOO
+  ##     value: "bar"
+  ##
+  extraEnvVars: []
+
 workers:
   ## Service account for cubestore workers to use
   ##
@@ -341,3 +353,11 @@ workers:
   ## Node selector for pod assignment
   ##
   nodeSelector: {}
+
+  ## Extra environment variables to pass on to the pod. The value is evaluated as a template
+  ## e.g:
+  ## extraEnvVars:
+  ##   - name: FOO
+  ##     value: "bar"
+  ##
+  extraEnvVars: []
